# crypto_scrapper

./: Cargo.toml  bitcoin.html
config/: config.toml  test.toml  xxx.toml
src/: lib.rs  main.rs
src/config/: mod.rs
src/frontend/: mod.rs
src/html/: mod.rs
