[package]
name = "crypto_scrapper"
version = "0.1.0"
authors = ["tmazhuan <thomas.mazhuancherry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.123", features = ["derive"] }