[package]
name = "crypto_scrapper"
version = "0.1.0"
authors = ["tmazhuan <thomas.mazhuancherry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
tokio = { version = "1.2.0", features = [ "full" ] }
serde = { version = "1.0.123", features = ["derive"] }
scraper = "0.12.0"
regex = "1.4.3"
#reqwest = {version = "0.11.1" , features = ["blocking"]}
fantoccini = "0.17.3"